# es-vector-sandbox

./: compose.yaml  mypy.ini  pyproject.toml
es_vector_search/: embedder.py  index.py  log_stdout.py  search.py  settings.json  stored_cache.py  two_tower.py  wands_data.py
