[project]
name = "es-vector-sandbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Doug Turnbull",email = "softwaredoug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "elasticsearch (>=8.17.2,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
